syntax = "proto3";

package v2ray.core.transport.internet.grpc.encoding;
option csharp_namespace = "V2Ray.Core.Transport.Internet.Grpc.Encoding";
option go_package = "github.com/ghxhy/v2ray-core/v5/transport/internet/grpc/encoding";
option java_package = "com.v2ray.core.transport.internet.grpc.encoding";

message Hunk {
  bytes data = 1;
}

service GunService {
  rpc Tun (stream Hunk) returns (stream Hunk);
}
